2005-01-12  Eric B. Weddington  <ericw@evcohs.com>

    * LICENSE: Update copyright year.

2005-01-10  Eric B. Weddington  <ericw@evcohs.com>

    * include/avr/wdt.h: Rewrite wdt_disable() to match datasheet algorithm.
    [Fix for bug #11522]
    * NEWS: Update bugs fixed list.

2005-01-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libm/fplib/asin.S: prefix internal global symbols
	with "__fp_".
	* libm/fplib/atan.S: (Ditto.)
	* libm/fplib/cos.S: (Ditto.)
	* libm/fplib/cosh.S: (Ditto.)
	* libm/fplib/divsf3.S: (Ditto.)
	* libm/fplib/exp.S: (Ditto.)
	* libm/fplib/fp_cosinus.S: (Ditto.)
	* libm/fplib/fp_flashconst.S: (Ditto.)
	* libm/fplib/fp_powerseries.S: (Ditto.)
	* libm/fplib/log.S: (Ditto.)
	* libm/fplib/sinh.S: (Ditto.)
	* libm/fplib/strtod.S: (Ditto.)
	* libm/fplib/tan.S: (Ditto.)

2005-01-07  Eric B. Weddington  <ericw@evcohs.com>

    * include/avr/sfr_defs.h: Remove doxygen comment about the deprecated 
    inp/outp items.
    [Fix for bug #11505]
    * NEWS: Update bugs fixed list.

2005-01-06  Eric B. Weddington  <ericw@evcohs.com>

    * include/avr/iom16.h: Put the port bit defintions back in for mega16.
    [Fix for bug #11486]

2005-01-06  Eric B. Weddington  <ericw@evcohs.com>

    * include/avr/wdt.h: Abstract the change enable bit for the mega32.
    [Fix for bug #11510]

2005-01-03  Eric B. Weddington  <ericw@evcohs.com>

    * include/avr/iotn26.h: Add missing pin definitions.
    [Fix for bug #11479]

2005-01-01  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* Makefile.am (install-data-local uninstall-local):
	Do also install .../include/compat.  While being here, repair
	uninstalling the entire world as well.

For older changes see ChangeLog-2004